projet_gl/src/test/deca/context/valid/3_32/3_32_Assign_Int.deca
// Description:
//    Programme faisant des assignations: Int
//
// Resultats:
//    
//
// Historique:
//    cree le 24/12/2023

{
        int a = 3;
        int b = a;
}