projet_gl/src/test/deca/context/invalid/3_32/3_32_Assign.deca
// Description:
//    Problème de compatibilité de typage pour l'assignation
//
// Resultats:
//    Ligne 12: The types are not the same
// 
// Historique:
//    cree le 24/12/2023

{   
   int a = "Salut";
}
